<resources>
    <string name="app_name">Majika</string>
    <string name="majika_label">Majika</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- DEFAULT UNTUK RECYCLEVIEW MENU MAKANAN -->
    <string name="default_nama">Makanan A</string>
    <string name="default_harga">Rp 50.000</string>
    <string name="default_terjual">10Rb+ Terjual</string>
    <string name="default_deskripsi">Pedas</string>

    <string name="btn_capture">Capture</string>
    <string name="btn_take_photo">Take Again</string>
    <string name="twibbon_warning_no_permissions">Camera permission is required to use this feature</string>
    <string name="image_preview">Image Preview</string>
    <string name="image_twibbon">Twibbon</string>

    <string-array name="nama_makanan">
        <item>Ayam Crisbar</item>
        <item>Nasgor Jawa</item>
        <item>Burger mekdi</item>
        <item>Ayam kfc</item>
        <item>Sate ngantuk</item>
        <item>Spinach Rice</item>
        <item>Salted Egg Ramen</item>
    </string-array>

    <string-array name="harga_makanan">
        <item>Rp 50.000</item>
        <item>Rp 100.000</item>
        <item>Rp 70.000</item>
        <item>Rp 40.000</item>
        <item>Rp 100.000</item>
        <item>Rp 70.000</item>
        <item>Rp 40.000</item>
    </string-array>

    <string-array name="terjual_makanan">
        <item>10RB+ Terjual</item>
        <item>20RB+ Terjual</item>
        <item>30RB+ Terjual</item>
        <item>10RB+ Terjual</item>
        <item>20RB+ Terjual</item>
        <item>30RB+ Terjual</item>
        <item>40RB+ Terjual</item>
    </string-array>

    <string-array name="deskripsi_makanan">
        <item>Enak</item>
        <item>Pedes</item>
        <item>lembek</item>
        <item>gurih</item>
        <item>sehat</item>
        <item>mengenyangkan</item>
        <item>membaperkan</item>
    </string-array>

     <!-- DEFAULT UNTUK RECYCLEVIEW CABANG RESTORAN -->
    <string name="default_name_branch">Cabang 1</string>
    <string name="default_popular_food">Makanan A</string>
    <string name="default_address">Jl. A</string>
    <string name="default_contact_person">Afan</string>
    <string name="default_phone_number">08123456789</string>

    <!-- FRAGMENT HEADER -->
    <string name="fragment_twibbon">Twibbon</string>
    <string name="fragment_keranjang">Keranjang</string>
    <string name="fragment_cabang_restoran">Cabang Restoran</string>
    <string name="fragment_pembayaran">Pembayaran</string>
    <string name="fragment_menu">Menu</string>

</resources>